# promtuz

./: .gitignore  Cargo.toml  README.md  build  build.bat  config.toml  rustfmt.toml
.github/workflows/: rust.yml
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json
android/app/debug/: output-metadata.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: core_bridge.cpp
android/app/src/main/cpp/include/: core_bindings.h
android/app/src/main/res/drawable/: i_back_chevron.xml  i_check.xml  i_code.xml  i_connection_status.xml  i_contacts.xml  i_dark_mode.xml  (+31 more)
android/gradle/: libs.versions.toml
app/src/main/res/raw/: resolver_seeds.txt
common/: Cargo.toml
common/src/: lib.rs
common/src/crypto/: encrypt.rs  mod.rs  sign.rs
common/src/macros/: mod.rs
common/src/node/: capability.rs  config.rs  enroll.rs  mod.rs
common/src/proto/: client_peer.rs  client_rel.rs  client_res.rs  dht_p2p.rs  mls_wire.rs  mod.rs  pack.rs  peer.rs  push.rs  relay_res.rs
common/src/quic/: config.rs  id.rs  mod.rs  p256.rs
common/src/server/: log.rs
common/src/sysutils/: mod.rs  system_load.rs
common/src/types/: bytes.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/api/: conn_stats.rs  connection.rs  misc.rs  mod.rs  welcome.rs
core/src/api/identity/: mod.rs  qr.rs  scanner.rs
core/src/data/: identity.rs  idqr.rs  mod.rs  relay.rs
core/src/db/: identity.rs  mod.rs  network.rs  relays.sql
core/src/events/: identity.rs  mod.rs
core/src/identity/: mod.rs
core/src/ndk/: defer.rs  key_manager.rs  mod.rs
core/src/quic/: mod.rs  peer_config.rs  server.rs
core/src/utils/: error.rs  mod.rs  ujni.rs  unwrap_or.rs
db/: Cargo.toml
db/src/: identity.rs  lib.rs  network.rs
gateway/: Cargo.toml  gateway.example.toml
gateway/src/: cli.rs  config.rs  fcm.rs  main.rs  registry.rs
gateway/src/gateway/: mod.rs
gateway/src/quic/: acceptor.rs  handler.rs
gradle/wrapper/: gradle-wrapper.properties
jni_macro/: Cargo.toml
jni_macro/src/: lib.rs
libcore/: Cargo.toml  README.md  build  build.bat
libcore/src/: lib.rs  messaging.rs  platform.rs  push.rs  state.rs
libcore/src/api/: connection.rs  identity.rs  init.rs  media.rs  messaging.rs  misc.rs  mod.rs  p2p.rs  recovery.rs  welcome.rs
libcore/src/api/identity/: mod.rs  scanner.rs
libcore/src/data/: backup.rs  contact.rs  identity.rs  idqr.rs  media.rs  message.rs  mod.rs  reaction.rs  recovery.rs  relay.rs  seen.rs
libcore/src/db/: identity.rs  messages.rs  mls.rs  mod.rs  network.rs  outbox.rs  peers.rs
libcore/src/db/utils/: mod.rs  ulid.rs
libcore/src/delivery/: mod.rs
libcore/src/e2e/: mod.rs
libcore/src/events/: connection.rs  identity.rs  messaging.rs  mod.rs
libcore/src/media/: mod.rs
libcore/src/mls/: epoch_catchup.rs  group.rs  keypackage.rs  mod.rs  provider.rs  scheduler.rs  signer.rs  storage.rs  types.rs  welcome.rs
libcore/src/ndk/: key_manager.rs  mod.rs
libcore/src/p2p/: candidate.rs  consent.rs  disco.rs  mod.rs  signal.rs  socket.rs
libcore/src/quic/: cert.rs  dht_client.rs  dialer.rs  keystore_signer.rs  mod.rs  peer1_client.rs  peer_config.rs  peer_identity.rs  relay_dht_client.rs  server.rs
libcore/src/transfer/: auth.rs  mod.rs  store.rs  wire.rs
libcore/src/utils/: macros.rs  mod.rs  unwrap_or.rs
libcore/tests/: e2e_phase5b.rs
relay/: .gitignore  Cargo.toml  README.md  config.toml  config.toml.example
relay/pkg/: install.sh  pzrelay.service  relay.toml
relay/pkg/scripts/: postinst
relay/src/: cli.rs  lib.rs  main.rs  stunturn.rs
relay/src/dht/: bootstrap.rs  config.rs  forward.rs  handler.rs  lookup.rs  metrics.rs  mls_fanout.rs  mls_kp.rs  mls_kp_originate.rs  mls_welcome.rs  mls_welcome_originate.rs  mod.rs  peer_dial.rs  publish.rs  push_replication.rs  push_wake.rs  queue_drain.rs  rate_limit.rs  routing.rs  store.rs  tests.rs  tls_extract.rs
relay/src/dht/mls/: fanout.rs  kp.rs  kp_originate.rs  mod.rs  welcome.rs  welcome_originate.rs
relay/src/dht/sync/: merkle.rs  mod.rs  rpc.rs
relay/src/quic/: acceptor.rs  dialer.rs  mod.rs  resolver_link.rs
relay/src/quic/handler/: mod.rs  peer.rs
relay/src/quic/handler/client/: handshake.rs  mod.rs
relay/src/quic/handler/client/events/: drain.rs  drain_auth.rs  forward.rs  handshake.rs  misc.rs  mls_relay.rs  mod.rs  presence.rs
relay/src/relay/: mod.rs
relay/src/storage/: db.rs  mod.rs
relay/src/util/: config.rs  mod.rs  rocksdb.rs
resolver/: .gitignore  Cargo.toml  README.md  rustfmt.toml
resolver/pkg/: pzresolver.service  resolver.toml
resolver/pkg/scripts/: postinst
resolver/src/: cli.rs  main.rs
resolver/src/quic/: acceptor.rs  dialer.rs  mod.rs
resolver/src/quic/handler/: client.rs  mod.rs  relay.rs  resolver.rs
resolver/src/resolver/: mod.rs  relays.rs  rpc.rs
resolver/src/util/: config.rs
src/: lib.rs  main.rs  router.rs
src/api/identity/: mod.rs
src/crypto/: encrypt.rs  mod.rs
src/data/: idqr.rs
src/db/: macros.rs  network.rs
src/dht/: mod.rs  tests.rs
src/events/: callback.rs  connection.rs
src/msg/: cbor.rs  client.rs  mod.rs  pack.rs  protorole.rs  reason.rs  relay.rs  resolver.rs  role.rs
src/node/: config.rs
src/proto/: api.rs  client.rs  client_peer.rs  client_rel.rs  mod.rs  pack.rs  peer.rs  relay_res.rs
src/quic/: acceptor.rs  config.rs  dialer.rs  endpoint.rs  handler.rs  id.rs  mod.rs  p256.rs  protorole.rs  resolver_link.rs
src/quic/handler/: client.rs  mod.rs  peer.rs  relay.rs  resolver.rs
src/quic/handler/client/: mod.rs
src/quic/handler/client/events/: handshake.rs  misc.rs  mod.rs
src/quic/msg/: dht.rs
src/relay/: mod.rs
src/resolver/: mod.rs  relays.rs  rpc.rs
src/sysutils/: mod.rs  system_load.rs
src/util/: config.rs  mod.rs
src/utils/: unwrap_or.rs
testnet/: Cargo.toml
testnet/src/: certs.rs  client.rs  deploy.rs  main.rs  sandbox.rs
tools/scripts/: gen-bindings.sh
tools/uniffi-bindgen/: Cargo.toml
web/: README.md  index.html
web/.well-known/: assetlinks.json
web/pair/: index.html
(+144 files in other folders)
