[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = { version = "0.11.9", features = ["rustls", "runtime-tokio"] }
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
common = { path = "../common", features = ["msg", "sysutils","macros","crypto", "sign"]}
toml = "0.9.8"
url = "2.5.7"
p256 = "0.13.2"
pem = "3.0.6"
serde_bytes = "0.11.19"
hex = "0.4.3"
anyhow = "1.0.100"
cmake = "0.1.57"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
sha2 = "0.10.9"
