[workspace]
members = ["core", "db", "jni_macro"]
resolver = "3"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false

debug = false
debug-assertions = false
overflow-checks = false

[workspace.dependencies]
log = "0.4.28"
once_cell = "1.21.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
parking_lot = "0.12.5"
rusqlite_migration = "2.3.0"
anyhow = { version = "1.0.100" }