[package]
name = "common"
version = "0.1.0"
edition = "2024"
description = "Shared library — crypto, protocols, QUIC config, identity"
license.workspace = true
repository.workspace = true

[features]
crypto = [
  "dep:rand",
  "dep:hkdf",
  "dep:ed25519-dalek",
  "dep:sha2",
  "dep:zeroize",
]
proto = ["quic", "sysutils", "types"]
quic = [
  "dep:rustls",
  "dep:rustls-pemfile",
  "dep:quinn",
  "dep:blake3",
  "dep:data-encoding",
  "dep:base64",
  "p256",
  "macros",
  "node",
]
p256 = ["dep:p256"]
sysutils = ["dep:sysinfo", "tokio"]
tokio = ["dep:tokio"]
macros = []
certgen = ["quic", "crypto", "dep:rcgen", "dep:clap"]
node = []
types = []
# aka relay & resolver
server = ["types", "dep:rand", "dep:notify"]
# aka libcore
client = ["types"]

[[bin]]
name = "certgen"
path = "src/bin/certgen.rs"
required-features = ["certgen"]

[dependencies]
log.workspace = true
hex.workspace = true
toml.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde_bytes.workspace = true
quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, features = ["pkcs8", "pem", "zeroize"], optional = true }
rustls-pemfile = { workspace = true, optional = true }
tokio = { workspace = true, features = ["io-util", "time", "net", "sync", "macros", "rt"], optional = true }
rand = { workspace = true, optional = true }

blake3 = { version = "1.8.5", optional = true }
data-encoding = { version = "2.11.0", optional = true }
hkdf = { version = "0.13.0", optional = true }
sha2 = { version = "0.11.0", optional = true }
zeroize = { workspace = true, optional = true }
p256 = { version = "0.13.2", optional = true, features = ["pkcs8"] }
rcgen = { version = "0.14.8", features = ["x509-parser"], optional = true }
base64 = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
ciborium = "0.2.2"
sysinfo = { version = "0.39.5", optional = true }
serde_with = "3.21.0"
postcard = { version = "1.1.3", features = ["alloc", "postcard-derive"] }
async-trait = "0.1.89"
