[package]
name = "core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["std"]
std = []

[dependencies]
# Workspace Crates
jni_macro = { path = "../jni_macro" }
db = { path = "../db" }
common = { path = "../../common", features = ["crypto", "sign", "msg"] }

# Public Crates
android_logger = "0.15"
jni = "0.21.1"
log.workspace = true
quinn = { version = "0.11.9", features = ["rustls"] }
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.9.2"
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
hex = "0.4.3"
once_cell.workspace = true
rusqlite.workspace = true
parking_lot.workspace = true
rusqlite_migration.workspace = true
anyhow.workspace = true
unicode-normalization = "0.1.25"
crc32fast = "1.5.0"
tokio-util = "0.7.17"
sha2 = "0.10.9"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "rand_core"] }
ciborium = "0.2.2"
rcgen = { version = "0.14.6", features = ["x509-parser"] }
x509-parser = "0.18.0"
