[package]
name = "gateway"
version.workspace = true
edition = "2024"
description = "Push gateway — blind APNs/FCM/UnifiedPush wake node"
license.workspace = true
repository.workspace = true

[dependencies]
common = { path = "../common", features = ["proto", "macros", "server", "crypto"] }
anyhow.workspace = true
toml.workspace = true
serde.workspace = true
quinn.workspace = true
tokio.workspace = true
clap.workspace = true
# Per-source-IP accept-side rate limiter (same pattern as the resolver).
governor = "0.10.4"
