[package]
name = "core"
version = "0.1.0"
edition = "2024"
description = "Client library — identity, encryption, networking (Android JNI)"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Workspace Crates
jni_macro = { path = "../jni_macro" }
common = { path = "../common", features = ["crypto", "proto", "client"] }

# Shared
anyhow.workspace = true
quinn.workspace = true
tokio.workspace = true
rustls.workspace = true
serde.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
hex.workspace = true
log.workspace = true
serde_bytes.workspace = true

# Public Crates
android_logger = "0.15"
jni = "0.21.1"
once_cell = "1.21.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
parking_lot = "0.12.5"
rusqlite_migration = "2.3.0"
unicode-normalization = "0.1.25"
crc32fast = "1.5.0"
ciborium = "0.2.2"
if-addrs = "0.14.0"
tokio-util = "0.7.18"
thiserror = "2.0.18"
zeroize = { version = "1.8.2", features = ["aarch64", "derive"] }
