[package]
name = "relay"
version = "0.1.0"
edition = "2024"
description = "Relay server — DHT node, client auth, presence replication"
license.workspace = true
repository.workspace = true

[dependencies]
common = { path = "../common", features = [
    "proto",
    "sysutils",
    "macros",
    "crypto",
    "server",
] }
quinn.workspace = true
rustls.workspace = true
serde.workspace = true
tokio.workspace = true
rustls-pemfile.workspace = true
anyhow.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
crossterm.workspace = true
toml.workspace = true
hex.workspace = true
serde_bytes.workspace = true
rust-rocksdb = "0.46.0"
parking_lot = "0.12.5"
