[package]
name = "relay"
version = "0.1.0"
edition = "2024"
description = "Relay server — DHT node, client auth, presence replication"
license.workspace = true
repository.workspace = true
default-run = "relay"

[dependencies]
common = { path = "../common", features = [
    "proto",
    "sysutils",
    "macros",
    "crypto",
    "server",
] }
hex.workspace = true
toml.workspace = true
rand.workspace = true
quinn.workspace = true
serde.workspace = true
tokio.workspace = true
rustls.workspace = true
anyhow.workspace = true
thiserror.workspace = true
crossterm.workspace = true
serde_bytes.workspace = true
ed25519-dalek.workspace = true
rustls-pemfile.workspace = true
rust-rocksdb = { version = "0.46.0", features = ["multi-threaded-cf"] }
parking_lot = "0.12.5"
zerocopy = "0.8.40"
uuid = { version = "1.21.0", features = ["v7"] }
