[package]
name = "relay"
version = "0.1.0"
edition = "2024"
description = "Relay server — DHT node, client auth, presence replication"
license.workspace = true
repository.workspace = true
default-run = "relay"

[dependencies]
common = { path = "../common", features = [
    "proto",
    "sysutils",
    "macros",
    "crypto",
    "server",
] }
hex.workspace = true
toml.workspace = true
rand.workspace = true
quinn.workspace = true
serde.workspace = true
tokio.workspace = true
rustls.workspace = true
anyhow.workspace = true
thiserror.workspace = true
crossterm.workspace = true
serde_bytes.workspace = true
ed25519-dalek.workspace = true
rustls-pemfile.workspace = true
rust-rocksdb = { version = "0.46.0", features = ["multi-threaded-cf"] }
parking_lot = "0.12.5"
zerocopy = "0.8.40"
tokio-util = "0.7.18"
# Per-peer DHT inbound-RPC rate limiter. Same crate / same version as
# the resolver side (`resolver/Cargo.toml`); we pick a `governor::Quota`
# per-RPC-class and key the limiter on `NodeId` instead of `IpAddr`.
# design-doc: §8.4 (storage flooding), §8.7 (DoS — request floods).
governor = "0.7"
# Used by the post-handshake TLS pubkey extractor in
# `dht::handler::handle_peer_connection`. Mirrors the parser libcore
# uses in `libcore/src/quic/peer_config.rs`.
x509-parser = "0.18"
