[package]
name = "resolver"
version = "0.1.0"
edition = "2024"
description = "Resolver server — relay discovery service"
license.workspace = true
repository.workspace = true

[dependencies]
common = { path = "../common", features = ["proto", "macros", "server"] }
anyhow.workspace = true
toml.workspace = true
hex.workspace = true
quinn.workspace = true
rustls.workspace = true
serde.workspace = true
tokio.workspace = true
rand.workspace = true
crossterm.workspace = true
rustls-pemfile.workspace = true
